tweak the default config

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,8 @@
 caddy_user: caddy
 caddy_group: caddy
 caddy_service_name: caddy
-caddy_default_port: 80
+caddy_host: 'localhost'
+caddy_default_port: ''
 caddy_log_path: /var/log/caddy
 caddy_config_path: /etc/caddy
 caddy_config_file: caddy.conf
